data/derived/comb/progs/unify/prog3989.ml.out
Characters 74-76:
  | x :: l' -> listReverse [l'] @ [x];;
                            ^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
